# Mentor-AI

activity-monitor/: .gitignore  README.md
activity-monitor/.claude/: settings.local.json
activity-monitor/daemon/: .env.example  Cargo.toml  README.md
activity-monitor/daemon/data/: activity_monitor.db
activity-monitor/daemon/src/: event_bus.rs  main.rs  store.rs
activity-monitor/daemon/src/collectors/: browser.rs  calendar.rs  clipboard.rs  filesystem.rs  mod.rs  process.rs  terminal.rs  window.rs
activity-monitor/daemon/src/distiller/: aggregate.rs  mod.rs
activity-monitor/daemon/src/immediate/: buffer.rs  mod.rs  recognizers.rs
activity-monitor/daemon/src/normalize/: entities.rs  mod.rs  session.rs
activity-monitor/daemon/src/profile/: mod.rs
activity-monitor/daemon/src/recommend/: mod.rs
activity-monitor/data/: activity_monitor.db
activity-monitor/extension/: README.md  background.js  manifest.json
activity-monitor/frontend/: README.md  index.html  package-lock.json  package.json
activity-monitor/frontend/src/: App.jsx
activity-monitor/frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
activity-monitor/frontend/src-tauri/src/: lib.rs
activity-monitor/frontend/src/components/: ImmediatePanel.jsx  ProfilePanel.jsx  RecommendationPanel.jsx  SessionsPanel.jsx
activity-monitor/scripts/: build-daemon-sidecar.sh  install-hooks.sh  start-app.sh  stop-app.sh
activity-monitor/scripts/shell-hooks/: README.md  bash.sh  fish.fish  term_sender.py  zsh.sh
